<resources>
    <string name="powered_by">Powered By</string>
    <string name="bamboo_note">Bamboo Note Application</string>
    <string name="bamboo_note_download">Google Play</string>

    <string name="app_name">WindLibrary</string>
    <string name="nav_header_title">Wind Library</string>
    <string name="nav_header_subtitle">vuthaiduy1990@gmail.com</string>
    <string name="nav_header_desc">The wind library which can speedup your app development</string>
    <string name="app_slogan">Color the wind</string>

    <string name="drawer_widget_components">Widget Components</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_checkbox">Checkbox</string>
    <string name="drawer_wind_color">Wind Color</string>
    <string name="drawer_wind_dimen">Wind Dimension</string>
    <string name="drawer_button">Button</string>
    <string name="drawer_dialog">Alert Dialog</string>
    <string name="drawer_custom_form_dialog">Custom Form Dialog</string>
    <string name="drawer_recycle_view">Recycle View</string>
    <string name="drawer_action_menu">Action Menu</string>
    <string name="drawer_search_box">SearchBox</string>
    <string name="drawer_tag_box">TagBox</string>
    <string name="drawer_dropdown">Dropdown</string>
    <string name="drawer_text_effect">Text Effect</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_image_slider">Image Slider</string>

    <string name="action_menu_recycle_list_view">List View</string>
    <string name="action_menu_recycle_grid_view">Grid View</string>
    <string name="action_menu_recycle_anim_sweet_alert">Anim: Sweet Alert</string>
    <string name="action_menu_recycle_anim_fade">Anim: Fade</string>
    <string name="action_menu_recycle_anim_left_right">Anim: Left2Right</string>
    <string name="action_menu_recycle_anim_right_left">Anim: Right2Left</string>
    <string name="action_menu_recycle_enable_swap_position">Enable Swap Position</string>

    <string name="action_menu_calendar_btf_transform">Background to Foreground Transformer</string>
    <string name="action_menu_calendar_ftb_transform">ForeGround to Background Transformer</string>
    <string name="action_menu_calendar_cube_in_transform">Cube In Transformer</string>
    <string name="action_menu_calendar_cube_out_transform">Cube Out Transformer</string>
    <string name="action_menu_calendar_depth_transform">Depth Transformer</string>
    <string name="action_menu_calendar_flip_horizontal_transform">Flip Horizontal Transformer</string>
    <string name="action_menu_calendar_flip_vertical_transform">Flip Vertical Transformer</string>
    <string name="action_menu_calendar_rotate_down_transform">Rotate Down Transformer</string>
    <string name="action_menu_calendar_rotate_up_transform">Rotate Up Transformer</string>
    <string name="action_menu_calendar_tablet_transform">Tablet Transformer</string>
    <string name="action_menu_calendar_zoom_in_transform">Zoom In Transformer</string>
    <string name="action_menu_calendar_zoom_out_transform">Zoom Out Transformer</string>

    <string name="action_menu_settings">Settings</string>
    <string name="action_menu_image_slider_dialog">Show dialog</string>

    <string name="button_primary">Primary</string>
    <string name="button_success">Success</string>
    <string name="button_info">Info</string>
    <string name="button_highlight">Highlight</string>
    <string name="button_warning">Warning</string>
    <string name="button_neutral">Neutral</string>
    <string name="button_danger">Danger</string>
    <string name="button_gray">Gray</string>
    <string name="button_delete">Yes,delete it!</string>
    <string name="button_ok">Apply</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_loading">Loading</string>
    <string name="button_search">Search</string>
    <string name="button_setting">日本語</string>
    <string name="button_lock">Tôi là người Việt Nam</string>
    <string name="button_yahoo">Yahoooo !!!</string>
    <string name="button_close">Close</string>

    <string name="wind_menu_item_setting">Settings</string>
    <string name="wind_menu_item_delete">Delete</string>
    <string name="wind_menu_item_edit">Edit</string>
    <string name="wind_menu_item_track_time">Track time</string>
    <string name="wind_menu_item_set_money">Set money</string>
    <string name="wind_menu_item_set_color">Set color</string>
    <string name="wind_menu_item_set_background">Set background with color of the wind</string>
    <string name="wind_menu_more_item">more item here more item here more item here more item here</string>

    <string name="illustration_title">Color the wind</string>
    <string name="illustration_text">You think you own whatever land you land on. The Earth is just a dead thing you can claim. But I know every rock and tree and creature. Has a life, has a spirit, has a name</string>
</resources>
