<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/_navHomeMenu"
        android:icon="@drawable/ic_home"
        android:title="@string/drawer_home" />

    <item android:title="@string/drawer_widget_components">
        <menu>
            <item
                android:id="@+id/_navCheckboxMenu"
                android:icon="@drawable/ic_checkbox"
                android:title="@string/drawer_checkbox" />
            <item
                android:id="@+id/_navColorMenu"
                android:icon="@drawable/ic_color"
                android:title="@string/drawer_wind_color" />
        </menu>
    </item>

</menu>
