<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_menu_recycle_list_view"
        android:orderInCategory="1"
        android:title="@string/action_menu_recycle_list_view"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_recycle_grid_view"
        android:orderInCategory="2"
        android:title="@string/action_menu_recycle_grid_view"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_settings"
        android:orderInCategory="3"
        android:title="@string/action_menu_settings"
        app:showAsAction="never" />
</menu>
