<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/_colorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Text only -->
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap"
            app:justifyContent="space_between">

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:text="@string/button_primary"
                app:type="PRIMARY" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:text="@string/button_success"
                app:type="SUCCESS" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:text="@string/button_info"
                app:type="INFO" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:text="@string/button_highlight"
                app:type="HIGHLIGHT" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:text="@string/button_neutral"
                app:type="NEUTRAL" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:text="@string/button_warning"
                app:type="WARNING" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:text="@string/button_danger"
                app:type="DANGER" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:text="@string/button_gray"
                app:type="GRAY" />

        </com.google.android.flexbox.FlexboxLayout>

        <!-- icon only -->
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap"
            app:justifyContent="space_between">

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="OK"
                app:type="SUCCESS" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="EDIT"
                app:type="HIGHLIGHT" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="SAVE"
                app:type="PRIMARY" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="TRASH"
                app:type="DANGER" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="WAITING"
                app:type="NEUTRAL" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="SEARCH"
                app:type="INFO" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="SETTING"
                app:type="GRAY" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="LOCK"
                app:type="PRIMARY" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="INFO"
                app:type="INFO" />

        </com.google.android.flexbox.FlexboxLayout>

        <!-- icon + text -->
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap"
            app:justifyContent="space_between">

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="OK"
                app:text="@string/button_ok"
                app:type="SUCCESS" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="EDIT"
                app:text="@string/button_edit"
                app:type="HIGHLIGHT" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="SAVE"
                app:text="@string/button_save"
                app:type="PRIMARY" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="TRASH"
                app:text="@string/button_delete"
                app:type="DANGER" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="WAITING"
                app:text="@string/button_loading"
                app:type="NEUTRAL" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="SEARCH"
                app:text="@string/button_search"
                app:type="INFO" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="SETTING"
                app:text="@string/button_setting"
                app:type="GRAY" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="LOCK"
                app:text="@string/button_lock"
                app:type="PRIMARY" />

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="INFO"
                app:text="@string/button_info"
                app:type="INFO" />

        </com.google.android.flexbox.FlexboxLayout>

        <!-- Animation for static icon -->
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <the.wind.library.view.Button
                android:id="@+id/_eventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                app:inlineIcon="TRASH"
                app:text="Are you sure?"
                app:textSize="15sp"
                app:type="DANGER" />
        </com.google.android.flexbox.FlexboxLayout>

        <!-- custom button -->
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <the.wind.library.view.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#c3cb71"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                app:customAnim="@raw/cycle_ahead"
                app:iconSize="64dp"
                app:spacing="20dp"
                app:text="@string/button_yahoo"
                app:textColor="#000000"
                app:textSize="@dimen/button_custom_text_size" />

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</ScrollView>